drawing added at Home/Create

--- a/SignalRApp/Views/Home/Contact.cshtml
+++ b/SignalRApp/Views/Home/Contact.cshtml
@@ -1,17 +1,25 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    Layout = null;
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title></title>
+    <style>
+        canvas {
+            position: relative;
+            background-color: #ffd800;
+        }
+    </style>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+</head>
+<body>
+    <canvas id='drawingpad' width='400' height='300'></canvas>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery.signalR-2.2.2.min.js"></script>
+    <!--auto generated scirpt of hub SignalR -->
+    <script src="~/signalr/hubs"></script>
+    <script src="~/Scripts/draw.js"></script>
+</body>
+</html>
